# nust1flare

./: BUILD.bazel  Commands.ipynb  DOCKER_SUBMISSION.md  Dockerfile  WORKSPACE  build_docker.sh  download_model.sh  eval_vqa.py  infer.py  infer_vqa.py  inputs_processed.json  predict.sh  requirements.txt  secrets_to_remove.txt
.github/workflows/: flare_img_compose.yaml
Data/process/.ipynb_checkpoints/: process_ct-checkpoint.py
commands/: frequent_xommands.txt
utils/: create_test_manifest.py
